# ECE472_DL

./: .gitignore  .pre-commit-config.yaml  README.md  hw03_results.txt  justfile
example/: README.md  pyproject.toml
example/src/example/: __init__.py  config.py  config.toml  data.py  logging.py  model.py  plotting.py  training.py
hw-template/: copier.yml  pyproject.toml.jinja
hw-template/src/{{ project_name }}/: __init__.py.jinja  logging.py.jinja
hw01/: README.md  pyproject.toml
hw01/src/hw01/: __init__.py  config.py  config.toml  data.py  logging.py  model.py  plotting.py  training.py
hw02/: README.md  pyproject.toml
hw02/src/hw02/: __init__.py  config.py  config.toml  data.py  logging.py  model.py  plotting.py  training.py
hw03/: README.md  pyproject.toml
hw03/src/hw03/: __init__.py  config.py  config.toml  data.py  logging.py  model.py  training.py
hw04/: README.md  pyproject.toml
hw04/src/hw04/: __init__.py  config.py  config.toml  data.py  logging.py  model.py  training.py
